crates/aranya-policy-compiler/tests/data/type_errors/is_non_option_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return x is None
  |            ^ expected `option[T]` but found `int`
